# hdx-geo-cod-extractor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  docker-compose.yml  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: run-python-script.yaml  run-python-tests.yaml
app/: __main__.py  config.py  utils.py
app/checks/: __main__.py  attribute_match.py  dates.py  geometry_gaps.py  geometry_valid.py  geometry_within_parent.py  languages.py  table_names.py  table_names_utils.py  table_other.py  table_pcodes.py
app/download/: __main__.py  metadata.py  ogr2ogr.py
app/metadata/: __main__.py  utils.py
app/scores/: __main__.py  geometry_topology.py  geometry_validity.py  output.py  table_dates.py  table_languages.py
src/hdx/scraper/cod_ab/: __main__.py  cod_ab.py  config.py  utils.py
src/hdx/scraper/cod_ab/app/: __main__.py  config.py  m49.csv
src/hdx/scraper/cod_ab/app/checks/: __init__.py  attribute_match.py  dates.py  geometry_gaps.py  geometry_valid.py  geometry_within_parent.py  languages.py  table_names.py  table_names_utils.py  table_other.py  table_pcodes.py
src/hdx/scraper/cod_ab/app/download/: __init__.py  metadata.py  ogr2ogr.py  points.py
src/hdx/scraper/cod_ab/app/formats/: __init__.py
src/hdx/scraper/cod_ab/app/metadata/: __init__.py  utils.py
src/hdx/scraper/cod_ab/app/scores/: __init__.py  geometry_topology.py  geometry_validity.py  output.py  table_languages.py
src/hdx/scraper/cod_ab/checks/: __init__.py  attribute_match.py  dates.py  geometry_gaps.py  geometry_overlaps_self.py  geometry_valid.py  geometry_within_parent.py  languages.py  table_names.py  table_names_config.py  table_names_utils.py  table_other.py  table_pcodes.py
src/hdx/scraper/cod_ab/config/: hdx_dataset_static.yaml  project_configuration.yaml
src/hdx/scraper/cod_ab/download/: __init__.py  metadata.py  ogr2ogr.py  postprocess.py
src/hdx/scraper/cod_ab/formats/: __init__.py
src/hdx/scraper/cod_ab/metadata/: __init__.py  utils.py
src/hdx/scraper/cod_ab/scores/: __init__.py  geometry_topology.py  geometry_validity.py  output.py  table_languages.py
tests/: conftest.py  test_cod_ab.py
tests/fixtures/input/: caf_metadata.csv  caf_metadata.json  services-hosted.json
