[project]
name = "hdx-geo-cod-extractor"
version = "0.1.0"
description = "Extracts COD-AB from OCHA FIS ArcGIS server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas",
    "httpx[http2]",
    "langcodes",
    "pyarrow",
    "pycountry",
    "pyicu",
    "python-dotenv",
    "tenacity",
    "xlsxwriter",
]

[dependency-groups]
dev = ["ruff", "taskipy"]

[tool.taskipy.tasks]
app = "python -m app"
export = "uv sync -q && uv export -q -o requirements.txt --no-dev --no-hashes"
ruff = "ruff format && ruff check && ruff format"
