[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-cod-ab"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "defusedxml",
    "geopandas",
    "hdx-python-api",
    "hdx-python-utilities",
    "httpx[http2]",
    "langcodes",
    "pyarrow",
    "pycountry",
    "pyicu",
    "python-dotenv",
    "tenacity",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest-cov", "pytest", "ruff", "taskipy"]

[dependency-groups]
dev = ["pre-commit", "pytest-cov", "pytest", "ruff", "taskipy"]

[tool.taskipy.tasks]
# uv run task app
app = "python -m hdx.scraper.cod_ab"
export = "uv sync -q && uv export -q -o requirements.txt --no-dev --no-hashes"
export_test = "uv sync -q && uv export -q -o requirements-test.txt --no-hashes"
ruff = "ruff format && ruff check && ruff format"
